fixing the menu hover and the gap/wrap in the features section-responsive

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ body {
   color: #fff;
   text-align: center;
   margin: 30px 0;
-  max-width: 25%;
+  max-width: 26%;
 }
 
 .signup-btn {
@@ -618,6 +618,21 @@ body {
     display: block;
   }
 
+  .USflag img {
+    width: 27px;
+  }
+
+  .lang {
+    color: #fafafa;
+    font-weight: bold;
+  }
+
+  .arrow img {
+    width: 17px;
+    margin-right: 20px;
+    cursor: pointer;
+  }
+
   .second-navlist {
     display: none;
   }
@@ -630,7 +645,7 @@ body {
     line-height: 18px;
     font-size: 0.844em;
     letter-spacing: 3px;
-    display: none;
+    display: block;
     position: absolute;
     text-align: right;
     background-color: #0000003d;
@@ -638,6 +653,10 @@ body {
 
   .menu li a:hover {
     text-decoration: underline;
+  }
+
+  .description {
+    max-width: 39%;
   }
 
   .text-box {
@@ -665,11 +684,11 @@ body {
   }
 
   .survey {
-    margin-left: 56px;
+    margin-left: 17px;
   }
 
   .select-field {
-    width: 91px;
+    width: 87%;
   }
 
   .content-box {
@@ -732,8 +751,13 @@ body {
   .features-section {
     height: fit-content;
   }
+
   .card-box {
     flex-wrap: wrap;
+  }
+
+  .card {
+    margin-bottom: 170px;
   }
 
   .footer-group {
